# file-search

./: .gitignore  CI_CD.md  CI_CD_QUICK_REFERENCE.md  Cargo.toml
.github/workflows/: benchmarks.yml  docs.yml  publish.yml  quality.yml  release.yml  tests.yml
benches/: directory_traversal.rs  end_to_end.rs  file_processing.rs  pattern_matching.rs
benches/data/: complex_pattern.txt  small_file.txt  unicode_content.txt
examples/: basic_search.rs  batch_search.rs  error_handling.rs
src/: cli.rs  config.rs  error.rs  executor.rs  lib.rs  logging.rs  main.rs  search.rs
tests/: integration_tests.rs
