[package]
name = "file-search"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"

[dev-dependencies]
tempfile = "3.8"