[package]
name = "file-search"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pattern_matching"
harness = false

[[bench]]
name = "file_processing"
harness = false

[[bench]]
name = "directory_traversal"
harness = false

[[bench]]
name = "end_to_end"
harness = false